# cocoa_solver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  documentation.yml
cmake/: CocoaUtils.cmake
docs/: Doxyfile  Doxyfile.in  Overview.dox  builddocs.sh  deploydocs.sh
html/: cocoa_8h_source.html  cocoa__advanced_8h_source.html  cocoa__mpc_8h_source.html  cocoa__qp_8h_source.html  cocoa__types_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  index.html  navtreedata.js  navtreeindex0.js
html/search/: all_0.js  pages_0.js
packaging/: CMakeLists.txt  cocoaConfig.cmake
src/: .clang-tidy  CMakeLists.txt  cocoa.c  cocoa.h  cocoa_advanced.c  cocoa_advanced.h  cocoa_mpc.c  cocoa_mpc.h  cocoa_qp.c  cocoa_qp.h  cocoa_types.h  main.c
test/: CMakeLists.txt  basic_test.cpp
